Add LoginPage class and LoginTest class and designed two test cases (valid and invalid login) with POM Design pattern

--- a/pom.xml
+++ b/pom.xml
@@ -38,23 +38,25 @@
         </dependency>
 
         <!-- log4j -->
+        <!-- Binding لـ Log4j2 -->
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-slf4j2-impl</artifactId>
+            <version>2.25.2</version>
+        </dependency>
+
+        <!-- Log4j Core -->
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-core</artifactId>
             <version>2.25.2</version>
         </dependency>
 
+        <!-- Log4j API -->
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-api</artifactId>
             <version>2.25.2</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-slf4j-impl</artifactId>
-            <version>2.25.2</version>
-            <scope>compile</scope>
         </dependency>
     </dependencies>
 
